--- a/frontend/front-tpfinal/src/app/app.component.html
+++ b/frontend/front-tpfinal/src/app/app.component.html
@@ -2,7 +2,11 @@
 <div *ngIf="logeado">
   <app-header></app-header>
   </div>
-  <router-outlet></router-outlet>
+  <app-header></app-header>
+  <body>
+    
+    <router-outlet></router-outlet>
+  </body>
   <div *ngIf="logeado">
   <app-footer></app-footer>
   </div>
