--- a/frontend/front-tpfinal/src/app/components/ciudades/ciudades.component.html
+++ b/frontend/front-tpfinal/src/app/components/ciudades/ciudades.component.html
@@ -1,9 +1,9 @@
 <p>ciudades works!</p>
 <form>
-<!-- <select class="form-control" [(ngModel)]="seleccion" name="seleccion" id="exampleFormControlSelect1"
+<select class="form-control" [(ngModel)]="seleccion" name="seleccionProvincia" id="exampleFormControlSelect1"
 required>
 <option *ngFor="let c of provincias" [value]="c.name">{{c.name}}</option>
-</select> -->
+</select>
  
 <button type="button" class="form-control" (click)="consultarProvincia(seleccion)"
 >Buscar</button>
