--- a/frontend/front-tpfinal/src/app/components/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.html
@@ -17,7 +17,8 @@
         <i class="fas fa-caret-down"></i>
       </a>
       <ul>
-        <li><a href="#">ejemplo</a></li>
+        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
+          routerLinkActive="active">ejemplo</a></li>
         <li>
           <a href="#">Desplegable
             <i class="fas fa-caret-right"></i>
