moficicacion del formulario de resenia, vistas y  almacenamiento de imagen en base64

--- a/frontend/front-tpfinal/src/app/components/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.html
@@ -18,7 +18,9 @@
       </a>
       <ul>
         <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
-          routerLinkActive="active">ejemplo</a></li>
+          routerLinkActive="active">lista de resenia</a></li>
+          <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
+            routerLinkActive="active">formulario resenia</a></li>
         <li>
           <a href="#">Desplegable
             <i class="fas fa-caret-right"></i>
