--- a/frontend/front-tpfinal/src/app/components/resenia/resenia.component.css
+++ b/frontend/front-tpfinal/src/app/components/resenia/resenia.component.css
@@ -4,8 +4,8 @@ table {
     border-collapse: collapse;
     border: 1px solid #d4d4d4;
     font-size: 20px;
-    background: #ffffffa4;
-    width: 50%;
+    background: #b4b4b4a4;
+    width: auto;
     height: auto;
 }
 
