se sube seguridad de las Apis

--- a/frontend/front-tpfinal/src/app/app.component.html
+++ b/frontend/front-tpfinal/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="logeado">
+<!--<div *ngIf="logeado">
   <app-header></app-header>
-</div>
-
+</div>-->
+<app-header></app-header>
 <body>
   <router-outlet></router-outlet>
 </body>
