--- a/frontend/front-tpfinal/src/app/components/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.html
@@ -1,18 +1,23 @@
 <nav>
   <label class="logo">PaginaTurismo</label>
   <ul>
-    <li><a  class="nav-link active" aria-current="home" [routerLink]="['home']"
-      routerLinkActive="active">Home</a></li>
     <li>
+      <a  class="nav-link active" aria-current="home" [routerLink]="['home']"
+      routerLinkActive="active">Home</a>
+    </li>
+    <li>
+      <a  class="nav-link active" aria-current="home" [routerLink]="['home']"
+      routerLinkActive="active">Sobre Nosotros</a>
+    </li>
+    <li *ngIf="loginService.usuarioLoggedIn()">
       <a href="#">Servicios
         <i class="fas fa-caret-down"></i>
       </a>
-      <ul>
+      <ul>  
         <li><a href="#">ejemplo</a></li>
-
       </ul>
     </li>
-    <li>
+    <li *ngIf="loginService.usuarioLoggedIn()">
       <a href="#">Resenias
         <i class="fas fa-caret-down"></i>
       </a>
@@ -29,9 +34,17 @@
         </li>
       </ul>
     </li>
-    <li><a href="#">Mi Perfil</a></li>
-    <li><a class="nav-link active" aria-current="login" [routerLink]="['login']"
-      routerLinkActive="active">Iniciar Sesion </a></li>
+    <li *ngIf="loginService.usuarioLoggedIn()">
+      <a href="#">Mi Perfil</a>
+    </li>
+    <li *ngIf="!loginService.usuarioLoggedIn()">
+      <a class="nav-link active" aria-current="login" [routerLink]="['login']"
+      routerLinkActive="active">Iniciar Sesion </a>
+  </li>
+  <li *ngIf="loginService.usuarioLoggedIn()">
+    <a class="nav-link active" aria-current="home" [routerLink]="['home']"
+        routerLinkActive="active" (click)="logout()"> Cerrar Secion </a>
+  </li>
   </ul>
 </nav>
 <section></section>
