--- a/frontend/front-tpfinal/src/app/components/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.html
@@ -37,8 +37,21 @@
       </ul>
     </li>
     <li *ngIf="loginService.usuarioLoggedIn()">
-      <a href="#">Mi Perfil</a>
+      <a href="#">Mi Perfil<i class="fas fa-caret-down"></i></a>
+      <ul>
+        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
+          routerLinkActive="active">Mis Datos</a></li>
+          <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
+            routerLinkActive="active">Mis Recervas</a></li>
+        <li>
+          <a href="#">Mis Resenias<i class="fas fa-caret-right"></i></a>
+          <ul>
+            <li><a href="#">ejemplo1</a></li>
+          </ul>
+        </li>
+      </ul>
     </li>
+  
     <li *ngIf="!loginService.usuarioLoggedIn()">
       <a class="nav-link active" aria-current="login" [routerLink]="['login']"
       routerLinkActive="active">Iniciar Sesion </a>
