--- a/frontend/front-tpfinal/src/app/app.component.css
+++ b/frontend/front-tpfinal/src/app/app.component.css
@@ -1,6 +1,17 @@
-body{
-    background: url(https://cdn4.gttwl.net/attachments/global/1470924557_original.jpeg?w=original&h=&fit=crop&crop=entropy&auto=format,enhance&q=60#tatid:978676);
+body {
+  background: url(https://cdn4.gttwl.net/attachments/global/1470924557_original.jpeg?w=original&h=&fit=crop&crop=entropy&auto=format,enhance&q=60#tatid:978676);
   background-position: center;
   background-size: cover;
   height: 100vh;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  min-height: 80vh;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
 }
