--- a/frontend/front-tpfinal/src/app/components/footer/footer.component.html
+++ b/frontend/front-tpfinal/src/app/components/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<!-- PIE DE PAGINA -->
+<footer class="bg-black text-center footer py-4">
+    <div class="container">
+            <div class="text-white">
+                    © 2023 Copyright:
+                    <a class="text-white">GRUPO10</a>
+                    | TPFINAL
+            </div>
+    </div>
+</footer>
