--- a/frontend/front-tpfinal/src/app/components/gestor/gestor.component.html
+++ b/frontend/front-tpfinal/src/app/components/gestor/gestor.component.html
@@ -1,2 +1,6 @@
 <h1>ID: {{id}}</h1>
 <h3>Tipo: {{tipo}}</h3>
+
+<div class="my-4 text-end">
+    <button type="button" class="btn btn-success fw-bold" (click)="irFormularioGestor()">Agregar Gestor</button>
+</div>
