--- a/frontend/front-tpfinal/src/app/components/ciudades/ciudades.component.html
+++ b/frontend/front-tpfinal/src/app/components/ciudades/ciudades.component.html
@@ -78,7 +78,8 @@
                     <tr>
                         <th scope="row">{{s.nombre}}</th>
                         <td colspan="2">{{s._id}}</td>
-                        <button>Visitar</button>
+                        <button type="button" class="form-control"
+                            (click)="seleccionarLocalidad(s)">Visitar</button>
                     </tr>
                 </tbody>
             </table>
