--- a/frontend/front-tpfinal/src/app/components/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
       <a href="#">Servicios
         <i class="fas fa-caret-down"></i>
       </a>
-      <ul>  
+      <ul>
         <li><a href="#">ejemplo</a></li>
       </ul>
     </li>
@@ -36,6 +36,21 @@
         </li>
       </ul>
     </li>
+
+    <li *ngIf="loginService.usuarioLoggedIn()">
+      <a href="#">Reservas
+        <i class="fas fa-caret-down"></i>
+      </a>
+      <ul>
+        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['reserva']"
+          routerLinkActive="active">lista de reservas</a>
+        </li>
+        <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reservaForm/:id']"
+            routerLinkActive="active">formulario reserva</a>
+        </li>
+      </ul>
+    </li>
+
     <li *ngIf="loginService.usuarioLoggedIn()">
       <a href="#">Mi Perfil<i class="fas fa-caret-down"></i></a>
       <ul>
@@ -51,7 +66,7 @@
         </li>
       </ul>
     </li>
-  
+
     <li *ngIf="!loginService.usuarioLoggedIn()">
       <a class="nav-link active" aria-current="login" [routerLink]="['login']"
       routerLinkActive="active">Iniciar Sesion </a>
