Fix relasiones front

--- a/frontend/front-tpfinal/src/app/components/gestor-form/gestor-form.component.html
+++ b/frontend/front-tpfinal/src/app/components/gestor-form/gestor-form.component.html
@@ -1,7 +1,7 @@
 <!-- REALIZAR TRANSACCION -->
 <section>
     <div class="my-4 formulario-gestor">
-        <form #gestorForm="ngForm" class="bg-white">
+        <form #gestorForm="ngForm" class="opacidad">
             <fieldset class="form-group border rounded p-3">
                 <legend class="w-auto fw-bold">GESTOR</legend>
 
