--- a/frontend/front-tpfinal/src/app/components/header/header.component.css
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.css
@@ -19,7 +19,7 @@ nav .logo{
 }
 nav{
   height: 70px;
-  background: #db612f;
+  background: #db602fbd;
   box-shadow: 0 3px 15px rgba(0,0,0,.4);
 }
 nav ul{
