--- a/frontend/front-tpfinal/src/app/components/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/header/header.component.html
@@ -2,18 +2,16 @@
   <label class="logo">PaginaTurismo</label>
   <ul>
     <li>
-      <a  class="nav-link " aria-current="home" [routerLink]="['home']"
-      routerLinkActive="active">Home</a>
+      <a class="nav-link " aria-current="home" [routerLink]="['home']" routerLinkActive="active"><i class="bi bi-house"></i> Home</a>
     </li>
     <li>
-      <a  class="nav-link " aria-current="home" [routerLink]="['home']"
-      routerLinkActive="active">Sobre Nosotros</a>
+      <a class="nav-link " aria-current="home" [routerLink]="['home']" routerLinkActive="active">Sobre Nosotros</a>
     </li>
     <li *ngIf="loginService.usuarioLoggedIn()">
       <a href="#">Servicios
         <i class="fas fa-caret-down"></i>
       </a>
-      <ul>  
+      <ul>
         <li><a href="#">ejemplo</a></li>
       </ul>
     </li>
@@ -22,9 +20,9 @@
         <i class="fas fa-caret-down"></i>
       </a>
       <ul>
-        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
-          routerLinkActive="active">lista de resenia</a></li>
-          <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
+        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']" routerLinkActive="active">lista
+            de resenia</a></li>
+        <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
             routerLinkActive="active">formulario resenia</a></li>
         <li>
           <a href="#">Desplegable
@@ -39,9 +37,9 @@
     <li *ngIf="loginService.usuarioLoggedIn()">
       <a href="#">Mi Perfil<i class="fas fa-caret-down"></i></a>
       <ul>
-        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
-          routerLinkActive="active">Mis Datos</a></li>
-          <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
+        <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']" routerLinkActive="active">Mis
+            Datos</a></li>
+        <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
             routerLinkActive="active">Mis Recervas</a></li>
         <li>
           <a href="#">Mis Resenias<i class="fas fa-caret-right"></i></a>
@@ -51,15 +49,14 @@
         </li>
       </ul>
     </li>
-  
+
     <li *ngIf="!loginService.usuarioLoggedIn()">
-      <a class="nav-link" aria-current="login" [routerLink]="['login']"
-      routerLinkActive="active">Iniciar Sesion </a>
-  </li>
-  <li *ngIf="loginService.usuarioLoggedIn()">
-    <a class="nav-link" aria-current="home" [routerLink]="['home']"
-        routerLinkActive="active" (click)="logout()"> Cerrar Secion </a>
-  </li>
+      <a class="nav-link" aria-current="login" [routerLink]="['login']" routerLinkActive="active">Iniciar Sesion </a>
+    </li>
+    <li *ngIf="loginService.usuarioLoggedIn()">
+      <a class="nav-link" aria-current="home" [routerLink]="['home']" routerLinkActive="active" (click)="logout()">
+        Cerrar Secion </a>
+    </li>
   </ul>
 </nav>
 <section></section>
