--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.css
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.css
@@ -22,7 +22,7 @@ nav .logo {
 
 nav {
   height: 70px;
-  background: #db602fbd;
+  background: #db612f;
   box-shadow: 0 3px 15px rgba(0, 0, 0, .4);
 }
 
