Add form servicios

--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
@@ -1,6 +1,8 @@
 <h1>ID: {{id}}</h1>
 <h3>Tipo: {{tipo}}</h3>
 
+<p>{{gestor | json}}</p>
+
 <div class="my-4 text-end">
-    <button type="button" class="btn btn-success fw-bold" (click)="irFormularioGestor()">Agregar Gestor</button>
+    <button type="button" class="btn btn-success fw-bold" (click)="irFormularioServicio()">Agregar Gestor</button>
 </div>
