--- a/frontend/front-tpfinal/src/app/components/reserva/reserva.component.html
+++ b/frontend/front-tpfinal/src/app/components/reserva/reserva.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-4">
-  <div class="text-center text-white">
+  <div class="text-center">
       <legend>Lista De Reservas</legend>
   </div>
   <div>
       <button class="btn btn-success" (click)="agregarReserva()">Agregar Reserva</button>
   </div>
-  <table class="table table-dark mt-3">
+  <table class="table table-light mt-3">
     <thead>
       <tr>
         <th scope="col">Nro de reserva</th>
