--- a/frontend/front-tpfinal/src/app/components/roles/login/login.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/login/login.component.html
@@ -37,7 +37,9 @@
         <div class="modal-body">
           <a href="#" aria-current="usuarioForm" [routerLink]="['/usuario-form']" routerLinkActive="active"
             data-bs-dismiss="modal">Registrarse como Usuario</a><br>
-          <a>Registrarse como Gestor</a>
+
+            <a href="#" aria-current="gestorForm" [routerLink]="['/gestor-form']" routerLinkActive="active"
+            data-bs-dismiss="modal">Registrarse como Gestor</a>
         </div>
       </div>
     </div>
