--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -1,5 +1,16 @@
+
 <nav>
-    <label class="logo">PaginaTurismo</label>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="dropdownMenu1">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
+      <label class="logo">PaginaTurismo</label>
     <ul>
         <li>
             <a class="nav-link " aria-current="home" [routerLink]="['home']" routerLinkActive="active"><i
