--- a/frontend/front-tpfinal/src/app/components/reserva/reserva.component.html
+++ b/frontend/front-tpfinal/src/app/components/reserva/reserva.component.html
@@ -1,35 +1,45 @@
-<div class="container mt-4">
+<div class="container mt-4" style="font-size: 14px;">
   <div class="text-center">
       <legend>Lista De Reservas</legend>
   </div>
   <div>
-      <button class="btn btn-success" (click)="agregarReserva()">Agregar Reserva</button>
+      <button class="btn btn-success" (click)="agregarReserva()"><i class="bi bi-plus mx-1"></i>Agregar Reserva</button>
   </div>
-  <table class="table table-light mt-3">
-    <thead>
-      <tr>
-        <th scope="col">Nro de reserva</th>
-        <th scope="col">Categoria</th>
-        <th scope="col">Cantidad</th>
-        <th scope="col">Fecha Alta</th>
-        <th scope="col">Fecha Ingreso</th>
-        <th scope="col">Precio</th>
-        <th scope="col">Reservado</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let r of listaReservas">
-        <td>{{r.numeroReserva}}</td>
-        <td>{{r.categoria}}</td>
-        <td>{{r.cantidad}}</td>
-        <td>{{r.fechaAlta}}</td>
-        <td>{{r.fechaIngreso}}</td>
-        <td>{{r.fechaEgreso}}</td>
-        <td>{{r.precio}}</td>
-        <td>{{r.reservado}}</td>
-        <button class="btn btn-info">Modificar</button>
-        <button class="btn btn-danger">Eliminar</button>
-      </tr>
-    </tbody>
-  </table>
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-12">
+      <table class="table table-dark">
+        <thead>
+          <tr>
+            <th scope="col">Nro de reserva</th>
+            <th scope="col">Categoria</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Fecha Alta</th>
+            <th scope="col">Fecha Ingreso</th>
+            <th scope="col">Fecha Egreso</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Reservado</th>
+            <th scope="col"></th>
+
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let r of listaReservas">
+            <td>{{r.numeroReserva}}</td>
+            <td>{{r.categoria}}</td>
+            <td>{{r.cantidad}}</td>
+            <td>{{r.fechaAlta}}</td>
+            <td>{{r.fechaIngreso}}</td>
+            <td>{{r.fechaEgreso}}</td>
+            <td>{{r.precio| currency: '$'}}</td>
+            <td>{{r.reservado}}</td>
+            <td>
+              <button class="btn btn-info mx-1"><i class="bi bi-pen mx-1"></i></button>
+              <button class="btn btn-danger mx-1" (click)="deleteReserva(r._id)"><i class="bi bi-trash3 mx-1"></i></button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
