--- a/frontend/front-tpfinal/src/app/app.component.html
+++ b/frontend/front-tpfinal/src/app/app.component.html
@@ -4,12 +4,8 @@
 <app-header></app-header>
 
 <body>
-  <div class="wrapper">
-    <div class="content">
-      <div class="container pb-4">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
 </body>
 
