--- a/frontend/front-tpfinal/src/app/components/home/home.component.html
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="fondo-home">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/assets/fondo-home/fondo-buenosaires.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/fondo-home/fondo-jujuy.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/fondo-home/fondo-misiones.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/fondo-home/fondo-rionegro.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/fondo-home/fondo-santacruz.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+    </div>
+</div>
