Crear un Servicio funcional

--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
@@ -4,5 +4,5 @@
 <p>{{gestor | json}}</p>
 
 <div class="my-4 text-end">
-    <button type="button" class="btn btn-success fw-bold" (click)="irFormularioServicio()">Agregar Gestor</button>
+    <button type="button" class="btn btn-success fw-bold" (click)="irFormularioServicio()">Agregar Servicio</button>
 </div>
