--- a/frontend/front-tpfinal/src/app/components/home/home.component.html
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.html
@@ -1,21 +1,46 @@
 <div class="fondo-home">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/assets/fondo-home/fondo-buenosaires.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/fondo-home/fondo-buenosaires.jpg" class="d-block w-100" alt="Fondo | BuenosAires">
             </div>
+
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-jujuy.jpeg" class="d-block w-100" alt="...">
+                <img src="/assets/fondo-home/fondo-jujuy.jpeg" class="d-block w-100" alt="Fondo | Jujuy">
             </div>
+
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-misiones.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/fondo-home/fondo-misiones.jpg" class="d-block w-100" alt="Fondo | Misiones">
             </div>
+
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-rionegro.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/fondo-home/fondo-rionegro.jpg" class="d-block w-100" alt="Fondo | RioNegro">
             </div>
+            
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-santacruz.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/fondo-home/fondo-santacruz.jpg" class="d-block w-100" alt="Fondo | SantaCruz">
             </div>
         </div>
+    </div>
+
+    <div class="carousel-caption">
+        <h2>Pagina Turismo</h2>
+
+        <p>Descripción</p>
+    </div>
+
+    <div class="corner-button">
+        <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            LOGIN
+        </button>
+
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+            <li><a class="dropdown-item" [routerLink]="['login']" routerLinkActive="active">Sign In</a></li>
+
+            <li class="dropdown-divider"></li>
+
+            <li><a class="dropdown-item">Sign Up</a></li>
+        </ul>
     </div>
 </div>
