--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.css
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.css
@@ -1,92 +1,22 @@
-* {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+a {
+  color: inherit;
   text-decoration: none;
 }
 
-body {
-
-  font-family: sans-serif;
-  overflow: hidden;
-  user-select: none;
+.navbar {
+  background-color: #FFA500;
+  padding: 0;
 }
 
-nav .logo {
+.navbar-nav .nav-link:hover {  
+  background-color: #FF8C00;
   color: white;
-  font-size: 33px;
-  font-weight: bold;
-  line-height: 70px;
-  padding-left: 110px;
 }
 
-nav {
-  height: 70px;
-  background: #db612f;
-  box-shadow: 0 3px 15px rgba(0, 0, 0, .4);
+.navbar-custom .dropdown-menu {
+  animation: fadeIn 0.3s;
 }
 
-nav ul {
-  float: right;
-  margin-right: 30px;
-}
-
-nav ul li {
-  display: inline-block;
-}
-
-nav ul li a {
-  color: white;
-  display: block;
-  padding: 0 15px;
-  line-height: 70px;
-  font-size: 20px;
-  background: #db612f;
-  transition: .5s;
-}
-
-nav ul li a:hover,
-nav ul li a.active {
-  color: #23dbdb;
-}
-
-nav ul ul {
-  position: absolute;
-  top: 85px;
-  border-top: 3px solid #23dbdb;
-  opacity: 0;
-  visibility: hidden;
-}
-
-nav ul li:hover>ul {
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-  transition: .3s linear;
-}
-
-nav ul ul li {
-  width: 150px;
-  display: list-item;
-  position: relative;
-  border: 1px solid #042331;
-  border-top: none;
-}
-
-nav ul ul li a {
-  line-height: 50px;
-}
-
-nav ul ul ul {
-  border-top: none;
-}
-
-nav ul ul ul li {
-  position: relative;
-  top: -70px;
-  left: 150px;
-}
-
-nav ul ul li a i {
-  margin-left: 45px;
+.navbar-collapse {
+  justify-content: flex-end;
 }
