--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -1,87 +1,39 @@
-<nav>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown button
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="dropdownMenu1">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <label class="logo">PaginaTurismo</label>
-    <ul>
-        <li>
-            <a class="nav-link " aria-current="home" [routerLink]="['home']" routerLinkActive="active"><i
-                    class="bi bi-house"></i> Home</a>
-        </li>
-        <li>
-            <a class="nav-link " aria-current="home" [routerLink]="['home']" routerLinkActive="active">Sobre
-                Nosotros</a>
-        </li>
-        <li *ngIf="loginService.usuarioLoggedIn()">
-            <a href="#">Servicios
-                <i class="fas fa-caret-down"></i>
-            </a>
-            <ul>
-                <li><a href="#">ejemplo</a></li>
-            </ul>
-        </li>
-        <li *ngIf="loginService.usuarioLoggedIn()">
-            <a href="#">Resenias
-                <i class="fas fa-caret-down"></i>
-            </a>
-            <ul>
-                <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
-                        routerLinkActive="active">lista
-                        de resenia</a></li>
-                <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
-                        routerLinkActive="active">formulario resenia</a></li>
-                <li>
-                    <a href="#">Desplegable
-                        <i class="fas fa-caret-right"></i>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="loginService.usuarioLoggedIn()">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" aria-current="page" [routerLink]="['servicio']">SERVICIOS</a>
+                </li>
+
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" aria-current="page">INFORMACION</a>
+                </li>
+
+                <li class="nav-item dropdown" routerLinkActive="active">
+                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        MI PERFIL
                     </a>
-                    <ul>
-                        <li><a href="#">ejemplo1</a></li>
+
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" [routerLink]="['usuario']">MIS DATOS</a></li>
+
+                        <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESERVAS</a></li>
+
+                        <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESENIAS</a></li>
+
+                        <li class="dropdown-divider"></li>
+
+                        <li><a class="dropdown-item" [routerLink]="['home']" routerLinkActive="active" (click)="logout()">CERRAR SESION</a></li>
                     </ul>
                 </li>
             </ul>
-        </li>
-        <li *ngIf="loginService.usuarioLoggedIn()">
-            <a href="#">Mi Perfil<i class="fas fa-caret-down"></i></a>
-            <ul>
-                <li><a class="nav-link active" aria-current="resenia" [routerLink]="['resenia']"
-                        routerLinkActive="active">Mis
-                        Datos</a></li>
-                <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reseniaForm/:id']"
-                        routerLinkActive="active">Mis Recervas</a></li>
-                <li>
-                    <a href="#">Mis Resenias<i class="fas fa-caret-right"></i></a>
-                    <ul>
-                        <li><a href="#">ejemplo1</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-
-        <li *ngIf="loginService.usuarioLoggedIn()">
-          <a href="#">Reservas<i class="fas fa-caret-down"></i></a>
-          <ul>
-              <li><a class="nav-link active" aria-current="reserva" [routerLink]="['reserva']"
-                      routerLinkActive="active">Reserva</a></li>
-              <li><a class="nav-link active" aria-current="reseniaForm" [routerLink]="['reservaForm/:id']"
-                      routerLinkActive="active">Alta Reserva</a></li>
-          </ul>
-      </li>
-
-        <li *ngIf="!loginService.usuarioLoggedIn()">
-            <a class="nav-link" aria-current="login" [routerLink]="['login']" routerLinkActive="active">Iniciar Sesion
-            </a>
-        </li>
-        <li *ngIf="loginService.usuarioLoggedIn()">
-            <a class="nav-link" aria-current="home" [routerLink]="['home']" routerLinkActive="active"
-                (click)="logout()">
-                Cerrar Secion </a>
-        </li>
-    </ul>
+        </div>
+    </div>
 </nav>
