--- a/frontend/front-tpfinal/src/app/components/home/home.component.html
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.html
@@ -36,7 +36,7 @@
         </button>
 
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" [routerLink]="['login']" routerLinkActive="active">Sign In</a></li>
+            <li><a class="dropdown-item" routerLink="/login" routerLinkActive="active">Sign In</a></li>
 
             <li class="dropdown-divider"></li>
 
