--- a/frontend/front-tpfinal/src/app/components/localidad-user/localidad-user.component.html
+++ b/frontend/front-tpfinal/src/app/components/localidad-user/localidad-user.component.html
@@ -1,22 +1,26 @@
-
 <div class="container-fluid">
-<h1 style="background-color: wheat;">{{nombre}}</h1>
+  <h1 style="background-color: wheat;">{{nombre}}</h1>
 
-<div class="card" style="width: 18rem;" >
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body" *ngFor="let s of servicios">
-    <h5 class="card-title">{{s.nombre}}</h5>
-    <p class="card-text"> Colocar algo sobre el servicio </p>
- 
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">categoria : {{s.categoria}}</li>
-    <li class="list-group-item">calificacion : {{s.calificacionTotal}}</li>
-    <li class="list-group-item">resenias</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Reservar</a>
+  <div *ngIf="servicios.length > 0">
+    <div class="card" style="width: 18rem;" *ngFor="let s of servicios">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{s.nombre}}</h5>
+        <p class="card-text">Colocar algo sobre el servicio</p>
+
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Categoría: {{s.categoria}}</li>
+          <li class="list-group-item">Calificación: {{s.calificacionTotal}}</li>
+          <li class="list-group-item">Reseñas</li>
+        </ul>
+        <div class="card-body">
+          <button type="button" class="form-control" (click)="realizarReserva(s._id)">Reservar</button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 
+  <div *ngIf="servicios.length === 0">
+    <p>No hay servicios disponibles aun!.</p>
+  </div>
 </div>
