--- a/frontend/front-tpfinal/src/app/components/reserva-form/reserva-form.component.html
+++ b/frontend/front-tpfinal/src/app/components/reserva-form/reserva-form.component.html
@@ -1,231 +1,120 @@
+
+
+
+
+
 <section class="col-lg-12 col-md-12 col-12 mt-5 mb-5">
-  <div class="my-4 formulario-reserva ">
-    <form #reservaForm="ngForm" class="bg-light-subtle w-50">
-      <fieldset class="form-group border rounded p-3">
-        <legend class="w-auto fw-bold">Reserva</legend>
-        <p>Campos obligatorios (<span class="text-danger fw-bold">*</span>)</p>
-        <hr />
-
-
-        <!-- CAMPO DE SERVICIOS -->
-        <!-- <div class="mb-4">
-          <label for="servicio" class="col-sm-3 col-form-label"
-            >Servicio(<span class="text-danger fw-bold">*</span>)</label
-          >
-          <select
-            class="form-select form-select-lg"
-            name="servicio"
-            id="servicio"
-            aria-label=".form-select-lg example"
-            [(ngModel)]="reserva.servicio"
-            #servicio="ngModel" required
-          >
-            <option *ngFor="let s of servicios" [ngValue]="s">
-                {{s.nombre}} - {{s.categoria}}
-            </option>
-          </select>
-          <div *ngIf="servicio.invalid && (servicio.dirty || servicio.touched)" class="alert alert-danger">
-            <div *ngIf="servicio.errors?.['required']">
-                Este campo es obligatorio.
-            </div>
-        </div>
-        </div> -->
-
-        <!-- CAMPO CATEGORIA -->
-        <div class="mb-4">
-          <label for="idNombreGestor" class="form-label"
-            >Categoria (<span class="text-danger fw-bold">*</span>)</label
-          >
-          <select
-            class="form-select form-select-lg"
-            name="categoria"
-            id="categoria"
-            aria-label=".form-select-lg example"
-            [(ngModel)]="reserva.categoria"
-            #categoria="ngModel"
-            required
-          >
-            <option value="restaurant">Restaurant</option>
-            <option value="hotel">Hotel</option>
-          </select>
-          <div
-            *ngIf="categoria.invalid && (categoria.dirty || categoria.touched)"
-            class="alert alert-danger"
-          >
-            <div *ngIf="categoria.errors?.['required']">
-              Tipo serviciotador es requerido.
+    <div class="my-4 formulario-reserva ">
+      <form #reservaForm="ngForm" class="bg-light-subtle w-50">
+        <fieldset class="form-group border rounded p-3">
+          <legend class="w-auto fw-bold">Reserva para : {{nombreServicio}} , {{reserva.categoria}}</legend>
+          <p>Campos obligatorios (<span class="text-danger fw-bold">*</span>)</p>
+          <hr />
+          
+          <!-- CAMPO CANTIDAD -->
+          <div class="mb-4">
+            <label class="form-label"
+              >Cantidad(<span class="text-danger fw-bold">*</span>)</label
+            >
+            <input
+              type="number"
+              class="form-control"
+              id="cantidad"
+              name="cantidad"
+              [(ngModel)]="reserva.cantidad"
+              (ngModelChange)="calcularPrecioRestaurante(reserva.cantidad)"
+              #cantidad="ngModel"
+              required
+            />
+            <div
+              *ngIf="cantidad.invalid && (cantidad.dirty || cantidad.touched)"
+              class="alert alert-danger"
+            >
+              <div *ngIf="cantidad.errors?.['required']">Ingrese un valor.</div>
+              <div *ngIf="cantidad.errors?.['min']">La cantidad minima es 1.</div>
             </div>
           </div>
-        </div>
-
-        <!-- CAMPO CANTIDAD -->
-        <div class="mb-4">
-          <label class="form-label"
-            >Cantidad(<span class="text-danger fw-bold">*</span>)</label
-          >
-          <input
-            type="number"
-            class="form-control"
-            id="cantidad"
-            name="cantidad"
-            [(ngModel)]="reserva.cantidad"
-            #cantidad="ngModel"
-            required
-          />
-          <div
-            *ngIf="cantidad.invalid && (cantidad.dirty || cantidad.touched)"
-            class="alert alert-danger"
-          >
-            <div *ngIf="cantidad.errors?.['required']">Ingrese un valor.</div>
-            <div *ngIf="cantidad.errors?.['min']">La cantidad minima es 1.</div>
-          </div>
-        </div>
-
-        <!-- CAMPO FECHA ALTA -->
-        <div class="mb-4">
-          <label for="fechaAlta" class="form-label"
-            >Fecha de Alta(<span class="text-danger fw-bold">*</span>)</label
-          >
-
-          <input
-            type="date"
-            class="form-control bg-light"
-            id="fechaAlta"
-            name="fechaAlta"
-            [(ngModel)]="reserva.fechaAlta"
-            required
-            #fechaAlta="ngModel"
-          />
-
-          <div
-            *ngIf="fechaAlta.invalid && (fechaAlta.dirty || fechaAlta.touched)"
-            class="alert alert-danger"
-          >
-            <div *ngIf="fechaAlta.errors?.['required']">
-              Debe ingresar Fecha
+  
+          <!-- CAMPO FECHA INGRESO-->
+          <div class="mb-4">
+            <label for="fechaIngreso" class="form-label"
+              >fechaIngreso(<span class="text-danger fw-bold">*</span>)</label
+            >
+  
+            <input
+              type="date"
+              class="form-control bg-light"
+              id="fechaAlta"
+              name="fechaIngreso"
+              [(ngModel)]="reserva.fechaIngreso"
+              (ngModelChange)="reserva.fechaEgreso = reserva.categoria === 'restaurante' ? reserva.fechaIngreso : reserva.fechaEgreso"
+              required
+              #fechaIngreso="ngModel"
+            />
+  
+            <div
+              *ngIf="
+                fechaIngreso.invalid &&
+                (fechaIngreso.dirty || fechaIngreso.touched)
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="fechaIngreso.errors?.['required']">
+                Debe ingresar Fecha
+              </div>
             </div>
           </div>
-        </div>
-
-        <!-- CAMPO FECHA INGRESO-->
-        <div class="mb-4">
-          <label for="fechaIngreso" class="form-label"
-            >fechaIngreso(<span class="text-danger fw-bold">*</span>)</label
-          >
-
-          <input
-            type="date"
-            class="form-control bg-light"
-            id="fechaAlta"
-            name="fechaIngreso"
-            [(ngModel)]="reserva.fechaIngreso"
-            required
-            #fechaIngreso="ngModel"
-          />
-
-          <div
-            *ngIf="
-              fechaIngreso.invalid &&
-              (fechaIngreso.dirty || fechaIngreso.touched)
-            "
-            class="alert alert-danger"
-          >
-            <div *ngIf="fechaIngreso.errors?.['required']">
-              Debe ingresar Fecha
+  
+          <!-- CAMPO FECHA EGRESO -->
+          <div class="mb-4" *ngIf="reserva.categoria !== 'restaurante'">
+            <label for="fechaEgreso" class="form-label"
+              >fechaEgreso(<span class="text-danger fw-bold">*</span>)</label
+            >
+  
+            <input
+              type="date"
+              class="form-control bg-light"
+              id="fechaAlta"
+              name="fechaIngreso"
+              [(ngModel)]="reserva.fechaEgreso"
+              required
+              #fechaEgreso="ngModel"
+            />
+  
+            <div
+              *ngIf="
+                fechaEgreso.invalid && (fechaEgreso.dirty || fechaEgreso.touched)
+              "
+              class="alert alert-danger"
+            >
+              <div *ngIf="fechaEgreso.errors?.['required']">
+                Debe ingresar Fecha
+              </div>
             </div>
           </div>
-        </div>
-
-        <!-- CAMPO FECHA EGRESO -->
-        <div class="mb-4">
-          <label for="fechaEgreso" class="form-label"
-            >fechaEgreso(<span class="text-danger fw-bold">*</span>)</label
-          >
-
-          <input
-            type="date"
-            class="form-control bg-light"
-            id="fechaAlta"
-            name="fechaIngreso"
-            [(ngModel)]="reserva.fechaEgreso"
-            required
-            #fechaEgreso="ngModel"
-          />
-
-          <div
-            *ngIf="
-              fechaEgreso.invalid && (fechaEgreso.dirty || fechaEgreso.touched)
-            "
-            class="alert alert-danger"
-          >
-            <div *ngIf="fechaEgreso.errors?.['required']">
-              Debe ingresar Fecha
-            </div>
+  
+          <!-- CAMPO PRECIO -->
+          <div class="mb-4">
+            <label class="form-label"
+              >Precio : </label
+            >
+          <div class="alert alert-primary" role="alert">       
+            <label for="precio" class="form-label" 
+              name="precio"> ARS : {{reserva.precio}}</label>   
+          </div> 
           </div>
-        </div>
-
-        <!-- CAMPO PRECIO -->
-        <div class="mb-4">
-          <label for="precio" class="form-label"
-            >Precio(<span class="text-danger fw-bold">*</span>)</label
-          >
-          <input
-            type="number"
-            class="form-control"
-            id="precio"
-            name="precio"
-            [(ngModel)]="reserva.precio"
-            #precio="ngModel"
-            required
-            min="0"
-          />
-          <div
-            *ngIf="precio.invalid && (precio.dirty || precio.touched)"
-            class="alert alert-danger"
-          >
-            <div *ngIf="precio.errors?.['required']">
-              Este campo es obligatorio.
-            </div>
-            <div *ngIf="precio.errors?.['min']">
-              Ingrese un numero positivo.
-            </div>
+          <!-- CAMPO RESERVADO -->
+  
+          <div class="mb-4 d-grid">
+            <button class="btn btn-success" (click)="guardarReserva()" [disabled]="!reservaForm.form.valid">
+              Guardar Reserva
+            </button>
           </div>
-        </div>
-
-        <!-- CAMPO RESERVADO -->
-        <div class="mb-4">
-          <label for="reservado" class="form-label"
-            >Reservado (<span class="text-danger fw-bold">*</span>)</label
-          >
-          <select
-            class="form-select form-select-lg"
-            name="reservado"
-            id="reservado"
-            aria-label=".form-select-lg example"
-            [(ngModel)]="reserva.reservado"
-            #reservado="ngModel"
-            required
-          >
-            <option value="true">Reservado</option>
-            <option value="false">No reservado</option>
-          </select>
-          <div
-            *ngIf="reservado.invalid && (reservado.dirty || reservado.touched)"
-            class="alert alert-danger"
-          >
-            <div *ngIf="reservado.errors?.['required']">
-              Campo Requerido
-            </div>
-          </div>
-        </div>
-
-
-        <div class="mb-4 d-grid">
-          <button class="btn btn-success" (click)="guardarReserva()" [disabled]="!reservaForm.form.valid">
-            Guardar Reserva
-          </button>
-        </div>
-      </fieldset>
-    </form>
-  </div>
-</section>
+        </fieldset>
+      </form>
+    </div>
+  </section>
+  
+  <h1>{{reserva | json}}</h1>
+  
+  
