--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -22,7 +22,7 @@
                     </a>
 
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" [routerLink]="['usuario']">MIS DATOS</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['usuario/datos']">MIS DATOS</a></li>
 
                         <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESERVAS</a></li>
 
