--- a/frontend/front-tpfinal/src/app/components/roles/login/login.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/login/login.component.html
@@ -35,7 +35,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <a href="#" aria-current="usuarioForm" [routerLink]="['/usuario-form']" routerLinkActive="active"
+          <a href="#" aria-current="usuarioForm" [routerLink]="['/usuario-form/0']" routerLinkActive="active"
             data-bs-dismiss="modal">Registrarse como Usuario</a><br>
 
             <a href="#" aria-current="gestorForm" [routerLink]="['/gestor-form']" routerLinkActive="active"
