vinculacion de resenia y servicio

--- a/frontend/front-tpfinal/src/app/components/localidad-user/localidad-user.component.html
+++ b/frontend/front-tpfinal/src/app/components/localidad-user/localidad-user.component.html
@@ -16,6 +16,14 @@
   <div class="card-body">
     <a href="#" class="card-link">Reservar</a>
   </div>
+  <div class="container justify-content-start align-content-start text-start">
+        <button type="button" class="btn btn-success mt-2 mb-3 fw-bold" (click)="obtenerReseniaServ(s)">Resenias <i
+                class="bi bi-clipboard2-plus"></i></button>
+    </div>
+    <div class="container justify-content-start align-content-start text-start">
+      <button type="button" class="btn btn-success mt-2 mb-3 fw-bold" (click)="cargar(s)">comentar <i
+              class="bi bi-clipboard2-plus"></i></button>
+  </div>
 </div>
 </div>
 
