--- a/frontend/front-tpfinal/src/app/components/resenias/resenia-servicio/resenia-servicio.component.html
+++ b/frontend/front-tpfinal/src/app/components/resenias/resenia-servicio/resenia-servicio.component.html
@@ -3,10 +3,10 @@
 
 <div class="container-fluid">
 
-    <div class="container justify-content-start align-content-start text-start">
+    <!--div class="container justify-content-start align-content-start text-start">
         <button type="button" class="btn btn-success mt-2 mb-3 fw-bold" (click)="cargar()">comentar <i
                 class="bi bi-clipboard2-plus"></i></button>
-    </div>
+    </div-->
     <!--*****lista desplegable****-->
     <table>
         <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button"
